Feature #82 : Testing the basic usages of JCR for attachments And adding a better Charset usage