@@ -1,27 +1,23 @@
 /**
  * Copyright (C) 2000 - 2011 Silverpeas
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
+ * This program is free software: you can redistribute it and/or modify it under the terms of the
+ * GNU Affero General Public License as published by the Free Software Foundation, either version 3
+ * of the License, or (at your option) any later version.
  *
- * As a special exception to the terms and conditions of version 3.0 of
- * the GPL, you may redistribute this Program in connection with Free/Libre
- * Open Source Software ("FLOSS") applications as described in Silverpeas's
- * FLOSS exception.  You should have received a copy of the text describing
- * the FLOSS exception, and it is also available here:
+ * As a special exception to the terms and conditions of version 3.0 of the GPL, you may
+ * redistribute this Program in connection with Free/Libre Open Source Software ("FLOSS")
+ * applications as described in Silverpeas's FLOSS exception. You should have received a copy of the
+ * text describing the FLOSS exception, and it is also available here:
  * "http://repository.silverpeas.com/legal/licensing"
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
+ * even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * Affero General Public License for more details.
  *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * You should have received a copy of the GNU Affero General Public License along with this program.
+ * If not, see <http://www.gnu.org/licenses/>.
  */
-
 package com.stratelia.webactiv.agenda.control;
 
 import java.io.File;
@@ -77,6 +73,7 @@ import com.stratelia.webactiv.util.GeneralPropertiesManager;
 import com.stratelia.webactiv.util.JNDINames;
 import com.stratelia.webactiv.util.ResourceLocator;
 import com.stratelia.webactiv.util.exception.SilverpeasException;
+import org.apache.commons.lang3.CharEncoding;
 
 /**
  * Class declaration
@@ -84,40 +81,30 @@ import com.stratelia.webactiv.util.exception.SilverpeasException;
  * @author
  */
 public class AgendaSessionController extends AbstractComponentSessionController {
+
   private int currentDisplayType = AgendaHtmlView.BYDAY;
   private boolean calendarVisible = true;
   private Calendar currentCalendar;
   private CalendarBm calendarBm;
   private Category category = null;
-
   private ResourceLocator settings;
-
   private JournalHeader currentJournalHeader = null;
   private Collection<Attendee> currentAttendees = null;
   private Collection<Category> currentCategories = null;
   private ParticipationStatus participationStatus = null;
-
   private NotificationSender notifSender = null;
-
   private List<Date> nonSelectableDays = null;
   private List<String> holidaysDates = null;
-
   private String serverURL = null;
-
   private String agendaUserId = getUserId();
   private UserDetail agendaUserDetail = getUserDetail();
-
   private final CalendarImportSettingsDao importSettingsDao = new CalendarImportSettingsDaoJdbc();
-
   public final static String ICALENDAR_MIME_TYPE = "text/calendar";
-
   public final static String EXPORT_SUCCEEDED = "0";
   public final static String EXPORT_FAILED = "1";
   public final static String EXPORT_EMPTY = "2";
-
   public final static String IMPORT_SUCCEEDED = "0";
   public final static String IMPORT_FAILED = "1";
-
   public final static String SYNCHRO_SUCCEEDED = "0";
   public final static String SYNCHRO_FAILED = "1";
   public final static String AGENDA_FILENAME_PREFIX = "agenda";
@@ -144,18 +131,14 @@ public class AgendaSessionController extends AbstractComponentSessionController 
     return "yes".equals(getSettings().getString("calendarRss"));
   }
 
+  @Override
   public String getRSSUrl() {
     if (isUseRss()) {
       try {
-        return "/rssAgenda/"
-            + getAgendaUserId()
-            + "?userId="
-            + getUserId()
-            + "&amp;login="
-            + URLEncoder.encode(getUserDetail().getLogin(), "UTF-8")
-            + "&amp;password="
-            + URLEncoder.encode(getOrganizationController().getUserFull(
-            getUserId()).getPassword(), "UTF-8");
+        return "/rssAgenda/" + getAgendaUserId() + "?userId=" + getUserId() + "&amp;login="
+            + URLEncoder.encode(getUserDetail().getLogin(), CharEncoding.UTF_8) + "&amp;password="
+            + URLEncoder.encode(getOrganizationController().getUserFull(getUserId()).getPassword(),
+            CharEncoding.UTF_8);
       } catch (UnsupportedEncodingException e) {
         SilverTrace.error("agenda", "AgendaSessionController.getRSSUrl()",
             "agenda.MSG_CANT_DEFINE_URL", e);
@@ -213,9 +196,9 @@ public class AgendaSessionController extends AbstractComponentSessionController 
     try {
       journal.getPriority().setValue(Integer.parseInt(priority));
     } catch (Exception e) {
-      SilverTrace.warn("agenda", "AgendaSessionController.addJournal(String name, " +
-          "String description, String priority, String classification, Date startDay, String " +
-          "startHour, Date endDay, String endHour)", "agenda.MSG_CANT_GET_PRIORITY", "", e);
+      SilverTrace.warn("agenda", "AgendaSessionController.addJournal(String name, "
+          + "String description, String priority, String classification, Date startDay, String "
+          + "startHour, Date endDay, String endHour)", "agenda.MSG_CANT_GET_PRIORITY", "", e);
 
     }
     try {
@@ -225,9 +208,10 @@ public class AgendaSessionController extends AbstractComponentSessionController 
       journal.setEndDay(DateUtil.date2SQLDate(endDay));
       journal.setEndHour(endHour);
     } catch (java.text.ParseException pe) {
-      throw new AgendaRuntimeException("AgendaSessionController.addJournal(String name, String " +
-          "description, String priority, String classification, Date startDay, String startHour, " +
-          "Date endDay, String endHour)", SilverpeasException.ERROR, "agenda.EX_CANT_ADD_JOURNAL", pe);
+      throw new AgendaRuntimeException("AgendaSessionController.addJournal(String name, String "
+          + "description, String priority, String classification, Date startDay, String startHour, "
+          + "Date endDay, String endHour)", SilverpeasException.ERROR, "agenda.EX_CANT_ADD_JOURNAL",
+          pe);
     }
     String result = calendarBm.addJournal(journal);
     return result;
@@ -296,11 +280,10 @@ public class AgendaSessionController extends AbstractComponentSessionController 
     try {
       journal.getPriority().setValue(Integer.parseInt(priority));
     } catch (Exception e) {
-      SilverTrace
-          .warn(
-              "agenda",
-              "AgendaSessionController. updateJournal(String name, String description, String priority, String classification, Date startDay, String startHour, Date endDay, String endHour)",
-              "agenda.MSG_CANT_GET_PRIORITY", "", e);
+      SilverTrace.warn(
+          "agenda",
+          "AgendaSessionController. updateJournal(String name, String description, String priority, String classification, Date startDay, String startHour, Date endDay, String endHour)",
+          "agenda.MSG_CANT_GET_PRIORITY", "", e);
     }
 
     try {
@@ -390,7 +373,6 @@ public class AgendaSessionController extends AbstractComponentSessionController 
   /**
    * methods for attendees
    */
-
   public Collection<Attendee> getJournalAttendees(String journalId)
       throws AgendaException {
     try {
@@ -562,7 +544,6 @@ public class AgendaSessionController extends AbstractComponentSessionController 
   /**
    * methods to manage current user state
    */
-
   public Category getCategory() {
     return category;
   }
@@ -808,8 +789,8 @@ public class AgendaSessionController extends AbstractComponentSessionController 
       categoryId = getCategory().getId();
     }
 
-    return calendarBm.getDaySchedulablesForUser(DateUtil
-        .date2SQLDate(getCurrentDay()), agendaUserId, categoryId,
+    return calendarBm.
+        getDaySchedulablesForUser(DateUtil.date2SQLDate(getCurrentDay()), agendaUserId, categoryId,
         getParticipationStatus().getString());
   }
 
@@ -884,8 +865,8 @@ public class AgendaSessionController extends AbstractComponentSessionController 
    */
   public Collection getBusyTime(String userId, java.util.Date day)
       throws RemoteException {
-    Collection<JournalHeader> result = calendarBm.getDaySchedulablesForUser(DateUtil
-        .date2SQLDate(day), userId, null, ParticipationStatus.ACCEPTED);
+    Collection<JournalHeader> result = calendarBm.getDaySchedulablesForUser(DateUtil.date2SQLDate(
+        day), userId, null, ParticipationStatus.ACCEPTED);
 
     if (!userId.equals(getUserId())) {
       Collection subResult = new ArrayList();
@@ -926,8 +907,8 @@ public class AgendaSessionController extends AbstractComponentSessionController 
    */
   public boolean isDayHasEvents(String userId, Date day) throws RemoteException {
     boolean isDayHasEvents = false;
-    Collection<JournalHeader> result = calendarBm.getDaySchedulablesForUser(DateUtil
-        .date2SQLDate(day), userId, null, ParticipationStatus.ACCEPTED);
+    Collection<JournalHeader> result = calendarBm.getDaySchedulablesForUser(DateUtil.date2SQLDate(
+        day), userId, null, ParticipationStatus.ACCEPTED);
     if (result != null) {
       if (result.size() > 0) {
         isDayHasEvents = true;
@@ -1375,8 +1356,8 @@ public class AgendaSessionController extends AbstractComponentSessionController 
    * @see
    */
   public String initSelectionPeas() {
-    String m_context = GeneralPropertiesManager.getGeneralResourceLocator()
-        .getString("ApplicationURL");
+    String m_context = GeneralPropertiesManager.getGeneralResourceLocator().getString(
+        "ApplicationURL");
     PairObject hostComponentName = new PairObject(getString("agenda"),
         m_context + "/Ragenda/jsp/Main");
     PairObject[] hostPath = new PairObject[1];
@@ -1461,11 +1442,9 @@ public class AgendaSessionController extends AbstractComponentSessionController 
         calendarBm.remove();
       }
     } catch (RemoteException e) {
-      SilverTrace
-          .error("agendaSession", "AgendaSessionController.close", "", e);
+      SilverTrace.error("agendaSession", "AgendaSessionController.close", "", e);
     } catch (RemoveException e) {
-      SilverTrace
-          .error("agendaSession", "AgendaSessionController.close", "", e);
+      SilverTrace.error("agendaSession", "AgendaSessionController.close", "", e);
     }
   }
 
@@ -1515,8 +1494,8 @@ public class AgendaSessionController extends AbstractComponentSessionController 
    * @see
    */
   public String initUserPanelOtherAgenda() {
-    String m_context = GeneralPropertiesManager.getGeneralResourceLocator()
-        .getString("ApplicationURL");
+    String m_context = GeneralPropertiesManager.getGeneralResourceLocator().getString(
+        "ApplicationURL");
     PairObject hostComponentName = new PairObject(getString("agenda"),
         m_context + "/Ragenda/jsp/Main");
     PairObject[] hostPath = new PairObject[1];
@@ -1628,8 +1607,9 @@ public class AgendaSessionController extends AbstractComponentSessionController 
     importSettingsDao.updateUserSettings(importSettings);
   }
 
-  /** =============== ICALENDAR MANAGEMENT ====================== **/
-
+  /**
+   * =============== ICALENDAR MANAGEMENT ====================== *
+   */
   /**
    * Export Calendar in Ical format
    *
@@ -1664,8 +1644,7 @@ public class AgendaSessionController extends AbstractComponentSessionController 
   public String importIcalAgenda(File fileCalendar) throws Exception {
     SilverTrace.debug("agenda", "AgendaSessionController.importIcalAgenda()",
         "root.MSG_GEN_ENTER_METHOD");
-    String returnCode = new ImportIcalManager(this)
-        .importIcalAgenda(fileCalendar);
+    String returnCode = new ImportIcalManager(this).importIcalAgenda(fileCalendar);
     SilverTrace.debug("agenda", "AgendaSessionController.importIcalAgenda()",
         "root.MSG_GEN_EXIT_METHOD");
     return returnCode;
@@ -1765,8 +1744,7 @@ public class AgendaSessionController extends AbstractComponentSessionController 
 
     List<HolidayDetail> holidayDates = new ArrayList<HolidayDetail>();
     while (currentCalendar.get(Calendar.MONTH) == iMonth) {
-      holidayDates
-          .add(new HolidayDetail(currentCalendar.getTime(), getUserId()));
+      holidayDates.add(new HolidayDetail(currentCalendar.getTime(), getUserId()));
       currentCalendar.add(Calendar.DATE, 7);
     }
     if (isHoliday) {
@@ -1878,5 +1856,4 @@ public class AgendaSessionController extends AbstractComponentSessionController 
     }
     return viewType;
   }
-
 }
